--- a/readiness-server/html/index.html
+++ b/readiness-server/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Welcome to Asclepie!</title>
+<title>Asclepie website</title>
 <style>
     body {
         width: 35em;
